; ModuleID = '/home/carl/AnghaBench/Craft/src/extr_util.c_load_program.c'
source_filename = "/home/carl/AnghaBench/Craft/src/extr_util.c_load_program.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GL_VERTEX_SHADER = common dso_local global i32 0, align 4
@GL_FRAGMENT_SHADER = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @load_program(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %8 = load i32, i32* @GL_VERTEX_SHADER, align 4
  %9 = load i8*, i8** %3, align 8
  %10 = call i32 @load_shader(i32 %8, i8* %9)
  store i32 %10, i32* %5, align 4
  %11 = load i32, i32* @GL_FRAGMENT_SHADER, align 4
  %12 = load i8*, i8** %4, align 8
  %13 = call i32 @load_shader(i32 %11, i8* %12)
  store i32 %13, i32* %6, align 4
  %14 = load i32, i32* %5, align 4
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @make_program(i32 %14, i32 %15)
  store i32 %16, i32* %7, align 4
  %17 = load i32, i32* %7, align 4
  ret i32 %17
}

declare dso_local i32 @load_shader(i32, i8*) #1

declare dso_local i32 @make_program(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
